website/code/hash2-icpp.log
BUILD COMMANDS FOR: hash2.icpp

Mon Oct 31 22:55:22 PST 2005

/opt/intel/cc/9.0/bin/icpc -c -O3 -ip -static -unroll  hash2.c++ -o hash2.c++.o &&  \
        /opt/intel/cc/9.0/bin/icpc hash2.c++.o -o hash2.icpp_run -O3 -ip -static -unroll  
hash2.c++(43): error: hash_map is not a template
      typedef hash_map<const char*, int, strhash> HM;
              ^

hash2.c++(54): error: name followed by "::" must be a class or namespace name
          for (HM::iterator k = hash1.begin(); k != hash1.end(); ++k) {
               ^

hash2.c++(54): error: expected a ";"
          for (HM::iterator k = hash1.begin(); k != hash1.end(); ++k) {
                            ^

hash2.c++(54): error: identifier "k" is undefined
          for (HM::iterator k = hash1.begin(); k != hash1.end(); ++k) {
                                               ^

compilation aborted for hash2.c++ (code 2)
make[2]: [hash2.icpp_run] Error 2 (ignored)
rm: cannot remove `hash2.c++.o': No such file or directory
rm: cannot remove `hash2.o': No such file or directory
make[2]: [hash2.icpp_run] Error 1 (ignored)

=================================================================
COMMAND LINE (%A is single numeric argument):

hash2.icpp_run %A
Error, could not exec hash2.icpp_run 50 (No such file or directory)
PATH=/opt/shootout/shootout/bench/hash2:/opt/shootout/shootout/bench/hash2/tmp:/usr/local/Acrobat5/bin:/usr/lib/postgresql/bin:/home/brent/GNUstep/Tools:/usr/local/lib/GNUstep/Local/Tools:/usr/local/lib/GNUstep/Network/Tools:/usr/lib/GNUstep/System/Tools:/usr/local/bin:/usr/bin:/bin:/usr/bin/X11:/usr/games
TEST FAILED - Child processed exited with error code (1)


PROGRAM OUTPUT
==============
